<resources>
    <string name="app_name">Floating Volume</string>
    <string name="app_permission_denied">App permissions have not been granted, please grant them manually.</string>
    <string name="start_service">Start</string>
    <string name="stop_service">Stop</string>
    <string name="service_channel_name">Floating Service notification</string>
    <string name="service_running_title">Floating Service is active</string>
    <string name="pref_themes">Themes</string>
    <string name="dialog_default_theme">1</string>
    <string name="dialog_theme_dtext">Choose your preferred theme</string>
    <string name="settings_title_save_position">Save the last position</string>>
    <string name="settings_summary_save_position">Place volume control dialog in last saved position</string>
    <string name="pref_disable_fixed_ui">Enable movable volume dialog</string>
    <string name="pref_disable_fixed_ui_summary">Allow moving volume dialog anywhere on the screen</string>
    <string name="pref_head_opacity_title">Floating icon opacity</string>
    <string name="pref_head_default_value">1f</string>
    <string name="pref_head_opacity_dtext">Choose preferred opacity</string>
    <string name="show_media_bar">Media Bar</string>
    <string name="show_ringer_bar">Ringer Bar</string>
    <string name="show_notification_bar">Notification Bar</string>
    <string name="show_alarm_bar">Alarm Bar</string>
    <string name="show_voicecall_bar">Voice Call Bar</string>
    <string name="items_to_show_in_dialog">Items to show in floating dialog</string>
    <string name="items_to_show_in_dialog_summary">Select which seek bars to show in the floating dialog</string>
    <string name="floating_interface_settings_category">Floating Interface Settings</string>
    <string name="about_category">About</string>
    <string name="theme_settings_category">Appearance</string>
    <string name="volume_interface_category">Volume Interface Settings</string>
    <string name="dialog_style_title">Dialog style settings</string>
    <string name="dialog_style_dtext">Choose your preferred style</string>
    <string name="dialog_default_style">1</string>
    <string name="about_app">About application</string>
    <string name="about_app_summary">Version, contact info, report bugs</string>
    <string name="pref_custom_theme">Custom theme settings</string>
    <string name="pref_custom_theme_summary">Adjust your own theme</string>
    <string name="title_activity_theme_settings">Custom Theme Settings</string>
    <string name="pref_icons_color">Icon color</string>
    <string name="pref_primary_color">Primary color</string>
    <string name="pref_accent_color">Accent color</string>
    <string name="pref_dialog_color">Dialog color</string>
    <string name="pref_background_color">Background color</string>
    <string name="apply_theme">Apply theme</string>
    <string name="pref_start_on_boot_title">Start on boot</string>
    <string name="pref_start_on_boot_summary">Floating Volume service will turn on automatically after the device is powered on</string>
    <string name="mode_ring">Ring</string>
    <string name="mode_vibrate">Vibrate</string>
    <string name="mode_silent">Silent</string>
    <string name="dialog_position_title">Fixed dialog position</string>
    <string name="dialog_position_dtext">Choose preferred dialog position</string>
    <string name="dialog_position_default">2</string>
    <string name="app_author">By Adam Myczkowski</string>
    <string name="licenses">Licenses</string>
    <string name="visit_website">Visit website</string>
    <string name="author">Author</string>
    <string name="author_name">Adam Myczkowski</string>
    <string name="author_location">Telford, United Kingdom</string>
    <string name="github_fork">Fork on GitHub</string>
    <string name="send_email">Send me an email</string>
    <string name="youtube_channel">YouTube channel</string>
    <string name="support">Support</string>
    <string name="rate_application">Rate application</string>
    <string name="bug_report">Report bugs</string>
    <string name="pref_show_mode_switch_title">Show ringer mode switch</string>
    <string name="pref_show_mode_switch_summary">Disable on Android Go devices or when you do not want to use the mode switch</string>
    <string name="dialog_timeout_default">3000</string>
    <string name="dialog_timeout_dtext">Volume dialog will be automatically closed after chosen time of inactivity</string>
    <string name="dialog_timeout_title">Volume dialog timeout</string>
    <string name="floating_icon_size_default">54</string>
    <string name="floating_icon_size_dtext">Choose preferred size of the floating icon</string>
    <string name="floating_icon_size_title">Floating icon size</string>
    <string name="dialog_interface_type_default">1</string>
    <string name="dialog_interface_type_dtext">Choose interface type</string>
    <string name="dialog_interface_type_title">Interface type</string>
</resources>
