<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.thebluealliance.spectrum.SpectrumPreference
        android:icon="@color/transparent"
        android:defaultValue="@color/black"
        android:key="pref_spectrum_color_icons"
        android:title="@string/pref_icons_color"
        app:spectrum_closeOnSelected="false"
        app:spectrum_outlineWidth="2dp"
        app:spectrum_colors="@array/spectrum_colors" />

    <com.thebluealliance.spectrum.SpectrumPreference
        android:icon="@color/transparent"
        android:defaultValue="@color/indigo"
        android:key="pref_spectrum_color_primary"
        android:title="@string/pref_primary_color"
        app:spectrum_closeOnSelected="false"
        app:spectrum_outlineWidth="2dp"
        app:spectrum_colors="@array/spectrum_colors" />

    <com.thebluealliance.spectrum.SpectrumPreference
        android:icon="@color/transparent"
        android:defaultValue="@color/pink"
        android:key="pref_spectrum_color_accent"
        android:title="@string/pref_accent_color"
        app:spectrum_closeOnSelected="false"
        app:spectrum_outlineWidth="2dp"
        app:spectrum_colors="@array/spectrum_colors" />

    <com.thebluealliance.spectrum.SpectrumPreference
        android:icon="@color/transparent"
        android:defaultValue="@color/white"
        android:key="pref_spectrum_color_dialog"
        android:title="@string/pref_dialog_color"
        app:spectrum_closeOnSelected="false"
        app:spectrum_outlineWidth="2dp"
        app:spectrum_colors="@array/spectrum_colors" />

    <com.thebluealliance.spectrum.SpectrumPreference
        android:icon="@color/transparent"
        android:defaultValue="@color/white"
        android:key="pref_spectrum_color_background"
        android:title="@string/pref_background_color"
        app:spectrum_closeOnSelected="false"
        app:spectrum_outlineWidth="2dp"
        app:spectrum_colors="@array/spectrum_colors" />
</PreferenceScreen>